--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,10 +6,8 @@
     <meta name="theme-color" content="#000000">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <title>NYT Article Scrubber</title>
-    <link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet">
+    <title>React recipes</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/3.3.7/flatly/bootstrap.min.css"/>
-   
   </head>
   <body>
     <noscript>
